<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    tools:context=".MainActivity" >

    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/search_menu" 
        >
        <TableRow >
        <AutoCompleteTextView 
        android:layout_height="20dp"
        
        android:text=""
        android:id="@+id/autoT"
        android:completionThreshold="1"
        android:hint="@string/search_content"
        android:textSize="14sp"
        android:layout_weight="7"
        android:layout_width="0dp"
        android:background="#f7f6f1"
        />            
        </TableRow>
        <TableRow >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
        </TableRow>
        <TableRow >
            
        </TableRow>
        <TableRow 
            android:gravity="right">
            <TextView
                android:id="@+id/personCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updown"
                android:id="@+id/updown"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultc"
                android:id="@+id/defaultc"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/officialPosition"
                android:id="@+id/officialPosition"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalWealth"
                android:id="@+id/personalWealth"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knowledge"
                android:id="@+id/educationalStatus"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/somebody_cohesion"
                android:id="@+id/cohesion"
                />
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content"                
                />  
                
        </TableRow>
    </TableLayout> 
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/sv2"> 

     <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:id="@+id/tableL2"
 
        >
         <TableRow>
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"                 
                 android:id="@+id/countnum"/>             
         </TableRow>
         
     </TableLayout>
     
     </ScrollView> 
     
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        >
      <ImageView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/task"
          android:contentDescription="@string/task"
          android:src="@drawable/task"
          android:paddingRight="20dp"/>
      <ImageView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/circlePower"
          android:contentDescription="@string/task"
          android:src="@drawable/circle"
          android:paddingRight="20dp"/>
      <ImageView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/findRelatives"
          android:contentDescription="@string/task"
          android:src="@drawable/relative"
          android:paddingRight="20dp"/>
      
    </LinearLayout>
        

</LinearLayout>
